# malcolm

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
scripts/: HostConfiguration.py  cluster.sh  generateConfig.py  runCluster.py  runTests.py
src/RL/AC_AVX2/: AC.cpp  AC.h  AVXMath.h  LRScheduler.h  memory.cpp  memory.h  uniformInit.cpp  uniformInit.h  utils.h
src/core/: context.h  defaults.h  driver.cpp  driver.h  endpointAddr.h  message.h  server.cpp  server.h
src/simulator/: CMakeLists.txt  dists.cpp  dists.h  simulator.cpp  simulator.h  simulator_main.cpp
src/tests/synthetic_distributions/: SyntheticDataDrivers.cpp  SyntheticDataServers.cpp
src/util/: config.h  distributions.h  helper.h  ringMMIO.h
